# lwr_velvet

./: README.md
grasping_experiments/: CMakeLists.txt  package.xml
grasping_experiments/data/beer_pile/: data.mat
grasping_experiments/data/beer_square/: data.mat
grasping_experiments/data/bull_pile/: data.mat
grasping_experiments/data/bull_square/: data.mat
grasping_experiments/data/cola_pile/: data.mat
grasping_experiments/data/cola_square/: data.mat
grasping_experiments/data/matlab/: evaluateData.m  parseExperiments.m
grasping_experiments/hqp_tasks/: task_definitions.yaml
grasping_experiments/include/grasping_experiments/: grasping_experiments.h
grasping_experiments/launch/: grasping_experiments.launch  grasping_experiments_gazebo.launch  lwr_velvet.rviz  test_control.launch
grasping_experiments/scripts/: setCylinderGraspApproach.sh  setHomeConfiguration.sh  setObjectExtract.sh  setPileApproach.sh  setSensingConfiguration.sh  setSphereGraspApproach.sh  tuneControllers.sh
grasping_experiments/src/: gimme_beer.cpp  grasping_experiments.cpp  lets_dance.cpp  look_what_i_found.cpp
grasping_experiments/test/: setGraspApproach.sh
group_effort_controllers/: CMakeLists.txt  README.md  group_effort_controllers_plugins.xml  package.xml
group_effort_controllers/include/group_effort_controllers/: joint_group_velocity_controller.h
group_effort_controllers/src/: joint_group_velocity_controller.cpp
lwr_control/: CMakeLists.txt  package.xml
lwr_control/config/: lwr_control.yaml
lwr_control/launch/: lwr_control.launch  lwr_effort_pos_control.perspective  lwr_effort_vel_control.perspective  lwr_forward_pos_control.perspective  lwr_forward_vel_control.perspective
lwr_description/: CMakeLists.txt  package.xml
lwr_description/gazebo/: gazebo.urdf.xacro
lwr_description/launch/: lwr.rviz  lwr_online.launch  lwr_rviz.launch
lwr_description/urdf/: lwr.gazebo.xacro  lwr.transmission.xacro  lwr.urdf.xacro  lwr.xacro  materials.xacro  utilities.xacro
lwr_gazebo/: package.xml
lwr_gazebo/launch/: lwr_world.launch
lwr_gazebo/worlds/: lwr.world
lwr_launch/: CMakeLists.txt  package.xml
lwr_launch/launch/: lwr_gazebo_effort_pos_control.launch  lwr_gazebo_effort_vel_control.launch  lwr_gazebo_forward_pos_control.launch  lwr_gazebo_forward_vel_control.launch
lwr_velvet_control/: CMakeLists.txt  package.xml
lwr_velvet_control/config/: lwr_velvet_control.yaml
lwr_velvet_control/launch/: lwr_velvet_control.launch  lwr_velvet_control_bkup.launch
lwr_velvet_description/: CMakeLists.txt  package.xml
lwr_velvet_description/config/: controllers.yaml  gazebo_controllers.yaml  lwr_velvet.rviz
lwr_velvet_description/gazebo/: gazebo.urdf.xacro
lwr_velvet_description/launch/: lwr_velvet.rviz  lwr_velvet_rviz.launch
lwr_velvet_description/urdf/: lwr_velvet.urdf.xacro  materials.xacro  table.urdf.xacro  torso.urdf.xacro
lwr_velvet_gazebo/: CMakeLists.txt  package.xml
lwr_velvet_gazebo/launch/: lwr_velvet_world.launch
lwr_velvet_launch/: CMakeLists.txt  package.xml
lwr_velvet_launch/launch/: lwr_velvet_gazebo_cartesian_impedance_control.launch  lwr_velvet_gazebo_forward_pos_control.launch  lwr_velvet_gazebo_forward_vel_control.launch  lwr_velvet_gazebo_hqp_eff_control.launch  lwr_velvet_gazebo_hqp_vel_control.launch  lwr_velvet_gazebo_joint_group_vel_eff_control.launch  lwr_velvet_joint_group_vel_eff_control.launch
oru_lwr_description/: CMakeLists.txt  package.xml
oru_lwr_description/model/: kuka_lwr.gazebo.xacro  kuka_lwr.transmission.xacro  kuka_lwr.urdf.xacro
