<?xml version="1.0"?>
<package>
  <name>group_effort_controllers</name>
  <version>0.0.0</version>
  <description>The group_effort_controllers package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend> 
  <build_depend>realtime_tools</build_depend>

  <run_depend>realtime_tools</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <controller_interface plugin="${prefix}/group_effort_controllers_plugins.xml"/>
   </export>
</package>




