<?xml version="1.0"?>
<package>
  <name>lwr_launch</name>
  <version>0.0.0</version>
  <description>The lwr_launch package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lwr_gazebo</run_depend>
  <run_depend>lwr_control</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
