<?xml version="1.0"?>
<package>
  <name>lwr_velvet_description</name>
  <version>0.0.0</version>
  <description>The lwr_velvet_description package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>velvet_fingers_description</run_depend>
  <run_depend>lwr_description</run_depend>

  <export>
  </export>
</package>
